# ChangeLog for dev-util/netbeans
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Aug 2008; Miroslav Šulc <fordfrog@gentoo.org> ++:
  Added ebuild for netbeans 6.5 milestone 1 - but it seems it is not
  possible to build netbeans using the official sources

  18 Jul 2008; Miroslav Šulc <fordfrog@gentoo.org> netbeans-6.1-r1.ebuild:
  Now depending on ant-1.7.1 which introduces /usr/share/ant/lib directory -
  reported by Betelgeuse

  30 Apr 2008; Miroslav Šulc <fordfrog@gentoo.org> -netbeans-6.1.ebuild,
  +netbeans-6.1-r1.ebuild:
  Fixed ant link

  30 Apr 2008; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.1_alpha20080118072101.ebuild,
  -netbeans-6.1_alpha20080207142509.ebuild,
  +files/6.1/nbbuild-build.xml.patch, +netbeans-6.1.ebuild,
  +files/6.1/reference.txt, -netbeans-6.1_alpha20080106171826.ebuild:
  Added netbeans-6.1 ebuild, this one uses everything bundled, work on
  unbundling the jars is needed

  13 Feb 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.1_alpha20080207142509.ebuild:
  Little progress with 'ide' cluster, stopped at compilation problem where
  some jax-ws jar is not on the classpath

  11 Feb 2008; Miroslav Šulc <fordfrog@gentoo.org> ++,
  +files/6.1/websvc.jaxws21-build.xml.patch,
  -files/6.1/websvc.jaxws21.api-build.xml.patch,
  netbeans-6.1_alpha20080207142509.ebuild:
  Little progress with 'ide' cluster, current stopper is probably patched
  jxpath library

  10 Feb 2008; Miroslav Šulc <fordfrog@gentoo.org>
  +files/6.1/websvc.jaxws21.api-build.xml.patch,
  netbeans-6.1_alpha20080207142509.ebuild:
  Little progress with 'ide' cluster

  08 Feb 2008; Miroslav Šulc <fordfrog@gentoo.org> ++,
  +files/6.1/o.apache.tools.ant.module-build.xml.patch,
  +files/6.1/o.apache.tools.ant.module-external-build.xml.patch,
  -netbeans-6.1_alpha20080127134700.ebuild:
  Upgraded to newer version and little more progress with 'ide' cluster

  29 Jan 2008; Miroslav Šulc <fordfrog@gentoo.org>