@@ -2,6 +2,10 @@
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Aug 2008; Miroslav Šulc <fordfrog@gentoo.org>
+  -netbeans-6.5_alpha1.ebuild, +netbeans-6.5_beta.ebuild:
+  netbeans bumped to 6.5 beta
+
   01 Aug 2008; Miroslav Šulc <fordfrog@gentoo.org> ++:
   Added ebuild for netbeans 6.5 milestone 1 - but it seems it is not
   possible to build netbeans using the official sources
